tests/ui/cve_2019_16138/cve_2019_16138_not_inlined.stderr
error: it violates the precondition of `Vec::set_len` to extend a `Vec`'s length without initializing its content in advance
  --> tests/ui/cve_2019_16138/cve_2019_16138_not_inlined.rs:9:9
   |
LL |     let mut ret: Vec<(u8, u8, u8)> = Vec::with_capacity(pixel_count);
   |                                      ------------------------------- `Vec` created here
...
LL |         ret.set_len(pixel_count);
   |         ^^^^^^^^^^^^^^^^^^^^^^^^ `Vec::set_len` called here
   |
   = help: before calling `set_len` to extend its length, make sure all elements are initialized, using such as `spare_capacity_mut` or `as_mut_ptr`
   = note: `#[deny(rpl::set_len_uninitialized)]` on by default

error: calling `set_len()` immediately after reserving a buffer creates uninitialized values
  --> tests/ui/cve_2019_16138/cve_2019_16138_not_inlined.rs:6:38
   |
LL |     let mut ret: Vec<(u8, u8, u8)> = Vec::with_capacity(pixel_count);
   |                                      ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
...
LL |         ret.set_len(pixel_count);
   |         ^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = help: initialize the buffer or wrap the content in `MaybeUninit`
   = note: `#[deny(rpl::uninit_vec)]` on by default

error: aborting due to 2 previous errors

